--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #000b16;
 }
 
 .App-logo {
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #455472;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,3 +37,82 @@
     transform: rotate(360deg);
   }
 }
+
+.Greeting {
+  padding-top: 200px;
+  min-height: 600px;
+  color: white;
+  margin-bottom: 150px;
+}
+
+.projects {
+  min-height: 600px;
+}
+
+.project-title {
+  color: rgb(255, 255, 231);
+}
+
+.text-align-left {
+  text-align: left;
+}
+
+.text-align-right {
+  text-align: right;
+}
+
+.blink {
+  border-bottom: 2px solid #78d68b;
+  animation: blink 10s infinite;
+}
+
+.blink:hover {
+  animation-duration: 1s;
+}
+
+@keyframes blink {
+  20% { border-color: #5890c5; }
+  40% { border-color: #af3a3a; }
+  60% { border-color: orange; }
+  80% { border-color: violet; }
+}
+
+.logo {
+  max-width: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.logo-card {
+  width: 7rem;
+  height: 7rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.logo-body {
+  transition: all 0.5s;
+  border-radius: 5%;
+}
+
+.logo-body:hover {
+  background-color: #192741;
+}
+
+.education {
+  color: white;
+  padding-top: 75px;
+  min-height: 900px;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+li:last-child {
+  margin-bottom: 0px;
+}
+
+
+
