--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color: #000b16;
+  color: white;
 }
 
 .App-logo {
@@ -38,8 +39,42 @@
   }
 }
 
+.welcome {
+  padding-top: 350px;
+  min-height: 1000px;
+  color: white;
+}
+
+.welcome-text {
+  animation: auto-fade 4s infinite;
+}
+
+.welcome > h1 {
+  font-size: 3.5rem;
+}
+
+.dropdown-arrow {
+  margin-top: 15px;
+  animation: bounce 3s infinite;
+}
+
+@keyframes bounce {
+  0% { transform: translateY(0); }
+  25% { transform: translateY(-5px); }
+  50% { transform: translateY(0); }
+  75% { transform: translateY(-5px); }
+  100% { transform: translateY(0); }
+}
+
+@keyframes auto-fade {
+  0% { opacity : 0; }
+  30% { opacity : 1; }
+  70% { opacity : 1; }
+  100% { opacity : 0; }
+}
+
 .Greeting {
-  padding-top: 200px;
+  padding-top: 75px;
   min-height: 600px;
   color: white;
   margin-bottom: 150px;
@@ -51,6 +86,7 @@
 
 .project-title {
   color: rgb(255, 255, 231);
+  text-align: left;
 }
 
 .text-align-left {
@@ -118,15 +154,29 @@ li:last-child {
   display: flex;
 }
 
+.flex-center {
+  align-items: center;
+  justify-content: center;
+}
+
 .fade-in {
   opacity: 0;
   visibility: hidden;
-  transition: opacity 1.5s ease-in;
+  transition: opacity 1s ease-in;
   will-change: opacity, visibility;
 }
 
 .fade-in.is-visible {
   opacity: 1;
   visibility: visible;
+}
+
+.contact {
+  min-height: 900px;
+  padding-top: 75px;
+}
+
+.section-header {
+  border-top: 2px solid #78d68b;
 }
 
