--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,12 @@
   text-align: left;
 }
 
+.project-text {
+  width: 900px;
+  max-width: 100%;
+  margin-right: auto;
+}
+
 .border1 {
   border-left: 2px solid #276fbf;
 }
@@ -178,7 +184,7 @@ li:last-child {
 .fade-in {
   opacity: 0;
   visibility: hidden;
-  transition: opacity 1s ease-in;
+  transition: opacity .5s ease-in;
   will-change: opacity, visibility;
 }
 
@@ -190,6 +196,24 @@ li:last-child {
 .contact {
   min-height: 900px;
   padding-top: 75px;
+}
+
+.contact-box {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 7px;
+  box-shadow: 0px 0px 6px rgb(0, 0, 0, 35%);
+}
+
+.contact-text {
+  margin: 1rem;
+}
+
+.contact-button {
+  margin: 1rem;
 }
 
 .section-header {
